--- a/ETL_Mini_Project_DJordan_DCinco_JNguyen_SPratz_.SNguyen.ipynb
+++ b/ETL_Mini_Project_DJordan_DCinco_JNguyen_SPratz_.SNguyen.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "8       cats9    journalism"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "23      subcats24              audio"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -2223,7 +2223,7 @@
        "999        food trucks       cats1       subcats1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2526,7 @@
        "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2617,14 +2617,14 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=3)\n",
     "contact_info_df.head()"
    ]
   },
@@ -2652,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2667,15 +2667,21 @@
     "# Iterate through the contact_info_df and convert each row to a dictionary.\n",
     "import json\n",
     "dict_values = []\n",
+    "for i, row in contact_info_df.iterrows():\n",
+    "    data = row['contact_info']\n",
+    "    converted_data = json.loads(data)\n",
     "\n",
+    "    row_values = [v for k, v in converted_data.items()]\n",
     "\n",
+    "    dict_values.append(row_values)\n",
+    "    \n",
     "# Print out the list of values for each row.\n",
     "print(dict_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2748,19 +2754,21 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "contacts_df = pd.DataFrame(dict_values, columns=['contact_id', 'name', 'email'])\n",
+    "contacts_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2781,12 +2789,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contacts_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2905,22 +2914,23 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
+    "contacts_df[['first_name', 'last_name']] = contacts_df['name'].str.split(' ', n=1, expand=True)\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "contact_info_df_sanitized = contacts_df.drop(['name'], axis=1)\n",
+    "contact_info_df_sanitized.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3039,18 +3049,20 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contact_info_df_sanitized = contact_info_df_sanitized[['contact_id', 'first_name', 'last_name', 'email']]\n",
+    "contact_info_df_sanitized.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3072,17 +3084,18 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contact_info_df_sanitized.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contact_info_df_sanitized.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
@@ -3094,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3155,7 +3168,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3167,7 +3180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3241,18 +3254,20 @@
        "4       2199  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the four-digit contact ID number.\n"
+    "# Extract the four-digit contact ID number.\n",
+    "contact_info_df_copy['contact_id'] = contact_info_df_copy['contact_info'].str.extract(r'(\\d{4})')\n",
+    "contact_info_df_copy.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3272,12 +3287,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info_df_copy.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3297,12 +3313,14 @@
     }
    ],
    "source": [
-    "# Convert the \"contact_id\" column to an int64 data type.\n"
+    "# Convert the \"contact_id\" column to an int64 data type.\n",
+    "contact_info_df_copy['contact_id'] = pd.to_numeric(contact_info_df_copy['contact_id'])\n",
+    "contact_info_df_copy.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3422,18 +3440,20 @@
        "9        5468    Danielle Ladeck  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the name of the contact and add it to a new column.\n"
+    "# Extract the name of the contact and add it to a new column.\n",
+    "contact_info_df_copy['name'] = contact_info_df_copy['contact_info'].str.extract(r'([^nameil\"\\s][A-Za-z]+\\s+[A-Za-z]+)')\n",
+    "contact_info_df_copy.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3564,18 +3584,20 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the email from the contacts and add the values to a new column.\n"
+    "# Extract the email from the contacts and add the values to a new column.\n",
+    "contact_info_df_copy['email'] = contact_info_df_copy['contact_info'].str.extract(r'\"(\\S+@\\S+)\"}')\n",
+    "contact_info_df_copy.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3683,18 +3705,20 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a copy of the contact_info_df with the 'contact_id', 'name', 'email' columns.\n"
+    "# Create a copy of the contact_info_df with the 'contact_id', 'name', 'email' columns.\n",
+    "contacts_df_copy2 = contact_info_df_copy[['contact_id', 'name', 'email']].copy()\n",
+    "contacts_df_copy2.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3813,21 +3837,24 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "contacts_df_copy2[['first_name', 'last_name']] = contacts_df_copy2['name'].str.split(' ', n=1, expand=True)\n",
     "\n",
     "\n",
-    "# Drop the contact_name column\n"
+    "# Drop the contact_name column\n",
+    "contact_info_df_sanitized_2 = contacts_df_copy2.drop(['name'], axis=1)\n",
+    "contact_info_df_sanitized_2.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -3946,18 +3973,20 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contact_info_df_sanitized_2 = contact_info_df_sanitized_2[['contact_id', 'first_name', 'last_name', 'email']]\n",
+    "contact_info_df_sanitized_2.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +4008,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contact_info_df_sanitized_2.info()"
    ]
   },
   {
@@ -3989,7 +4019,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "# contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "# contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)\n"
    ]
   },
   {
