--- a/ETL_Mini_Project_DJordan_DCinco_JNguyen_SPratz_SNguyen.ipynb
+++ b/ETL_Mini_Project_DJordan_DCinco_JNguyen_SPratz_SNguyen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      False           theater/plays  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "8       cats9    journalism"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "23      subcats24              audio"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1307,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1537,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
        "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 58,
    "metadata": {
     "scrolled": false
    },
@@ -2223,7 +2223,7 @@
        "999        food trucks       cats1       subcats1  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2237,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2526,7 @@
        "[1000 rows x 14 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2539,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2652,7 +2652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2754,7 +2754,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2795,7 +2795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2914,7 +2914,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2930,7 +2930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3049,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3062,7 +3062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3090,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3107,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3168,7 +3168,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3180,7 +3180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3254,7 +3254,7 @@
        "4       2199  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3267,7 +3267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3293,7 +3293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -3320,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -3440,20 +3440,20 @@
        "9        5468    Danielle Ladeck  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Extract the name of the contact and add it to a new column.\n",
-    "contact_info_df_copy['name'] = contact_info_df_copy['contact_info'].str.extract(r'([^nameil\"\\s][A-Za-z]+\\s+[A-Za-z]+)')\n",
+    "contact_info_df_copy['name'] = contact_info_df_copy['contact_info'].str.extract(r'([^nameil\"\\s][A-z]+\\s+[A-z]+)')\n",
     "contact_info_df_copy.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3584,7 +3584,7 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3597,7 +3597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -3705,7 +3705,7 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3718,7 +3718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -3837,7 +3837,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3854,7 +3854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3973,7 +3973,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3986,7 +3986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -4014,7 +4014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4046,7 +4046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
